[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/bebasneue_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 729.0
margin_right = 950.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 1 )
text = "MOUSE  TRAINER
"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 1680.0
margin_bottom = 515.0

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_right = 1680.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 3 )
text = "SLOW PUSH"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton2" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 1680.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "BURST"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton3" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 1680.0
margin_bottom = 197.0
custom_fonts/font = ExtResource( 3 )
text = "INTERVALS"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton4" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 1680.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 3 )
text = "CONSTANT"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton5" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 1680.0
margin_bottom = 331.0
custom_fonts/font = ExtResource( 3 )
text = "PATHWAY"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton6" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 1680.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
shortcut_in_tooltip = false
text = "RESET HIGH SCORES"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_button_up"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MenuButton2" to="." method="_on_MenuButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MenuButton6" to="." method="_on_MenuButton6_pressed"]
